2006-08-27  Nathaniel Smith  <njs@pobox.com>

	* tests/status: Add indentation to match changes in output
	format.
	* cmd_ws_commit.cc (status): Remove unsightly extra \n.

2006-08-27  Nathaniel Smith  <njs@pobox.com>

	* database.cc (put_version): Add some MM()'s, in case the
	invariant in this function fails again (as reported on the mailing
	list).

2006-08-25  Nathaniel Smith  <njs@pobox.com>

	* cmd_ws_commit.cc (status): Print current branch, and parent rev,
	in 'status'.

2006-08-24  Richard Levitte  <richard@levitte.org>

	* po/ja.po: Change the number of possible plurals to 2.
	This was done with permission from the official JA
	translator.

2006-08-25  Matt Johnston  <matt@ucc.asn.au>

	* options.hh: workaround for gcc < 3.4 parse error on
	vv.as<T)();

2006-08-24  Thomas Moschny <thomas.moschny@gmx.de>

	* revision.cc (select_nodes_modified_by_rev)
	* revision.hh (select_nodes_modified_by_rev): Remove unused first
	argument (rid).
	* cmd_diff_log.cc (CMD(log)): Adjust sole usage of that function.

2006-08-24  Matthew Gregan  <kinetik@orcon.net.nz>

	* merge.cc (resolve_merge_conflicts): Bail out of conflict
	resolution early if content_merger::try_to_merge_files indicates
	conflicts remain after a merge attempt.

2006-08-23  Lapo Luchini  <lapo@lapo.it>

	* po/it.po: Updated and translated a few more strings (40 to go).

2006-08-23  Jon Bright  <jon@siliconcircus.com>

	* tests/diff_against_empty_file/__driver__.lua: Canonicalize the
	output before checking.

2006-08-23  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* tests/diff_against_empty_file/expected.diff:
	* tests/diff_against_empty_file/__driver__.lua: Instead of
	checking if the resulting patch file applies correctly, compare it
	to a correct prestored copy.  This is to prevent a bug in some
	patch(1) implementations that do not deal correctly with reversed
	patches applied to empty files.  Problem exposed under NetBSD.

2006-08-23  Jon Bright  <jon@siliconcircus.com>
